Clean and rename Infos supply endpoints
